Closed
Bug 669890
Opened 15 years ago
Closed 15 years ago
Can't compile with --enable-profiling since 28be8df0deb7 (bug 667915)
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: justin.lebar+bug, Unassigned)
References
Details
Attachments
(1 file)
|
1.39 KB,
patch
|
Details | Diff | Splinter Review |
../../../../src/js/src/shell/js.cpp:5070:146: error: size of array ‘js_static_assert85’ is negative
../../../../src/js/src/nanojit/NativeX64.h:347:31: warning: ‘nanojit::SavedRegs’ defined but not used
../../../../src/js/src/nanojit/NativeX64.h:355:31: warning: ‘nanojit::SingleByteStoreRegs’ defined but not used
There's a missing comma. Patch in a moment.
| Reporter | ||
Comment 1•15 years ago
|
||
| Reporter | ||
Comment 2•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•