Bug 669890 - Add missing comma to js/src/shell/js.cpp. rs=bz